# axiom_islam

./: Cargo.toml  Copy_of_axiom_test.ipynb  README.md  index.html
data/: bio_hybrid_data.json  config.json  core_philosophies.json  cosmology.json  key_projects.json  peace_initiative.json  user_profile.json
quickstarts/: Audio.ipynb
src/: config.rs  data_models.rs  lib.rs  main.rs  utils.rs
src/architecture_components/: dsn.rs  ksl.rs  mod.rs  snn_quantum_pocket.rs  topical_bnn.rs
src/blockchain/: block.rs  ledger.rs  transaction.rs
src/core/: identity.rs  neuron.rs
