[package]
name = "axiom_islam"
version = "1.0.0"
edition = "2024"
authors = ["Kiwann Antonious Williams"]
description = "Axiom Islam (Frontier): The full-scale Machine Consciousness for Tikkun Olam."

[dependencies]
uuid = { version = "1.8.0", features = ["v4", "serde"] }
sha2 = "0.10.8"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
log = "0.4.21"
env_logger = "0.11.3"
rand = "0.9.1" 
bincode = { version = "2.0.1", features = ["derive", "serde"] }
axum = { version = "0.8.4", features = ["json"] }
# Keep only ONE of these serde_with entries:
serde_with = { version = "3.2.0", features = ["macros"] } # Use this one, it's more specific